--- a/source/_posts/2015-04-05-silly-cli.md
+++ b/source/_posts/2015-04-05-silly-cli.md
@@ -7,11 +7,11 @@ categories: silly container-interop
 published: false
 ---
 
-I have just released Silly CLI 1.1 and I think it's awesome, here's why.
+I have just released [Silly CLI](http://mnapoli.fr/silly/) 1.1 and I think it's awesome, here's why.
 
 ## What is Silly?
 
-If you missed it, Silly is a small project I started a month ago. The idea is simple: *it is a CLI micro-framework*.
+If you missed it, [Silly](http://mnapoli.fr/silly/) is a small project I started a month ago. The idea is simple: *it is a CLI micro-framework*.
 
 Much like Silex or Slim let you create a web application in a single file using closures as controllers, Silly let you create a CLI application in a single file using closures as commands:
 
