--- a/source/_posts/2015-04-05-silly-cli.md
+++ b/source/_posts/2015-04-05-silly-cli.md
@@ -109,7 +109,7 @@ Instead of forcing you into using a *supposedly* better DI container, Silly goes
 $app->useContainer($container);
 ```
 
-The container you provide has to be compliant with the [container-interop](https://github.com/container-interop/container-interop) standard.
+The container you provide has to be compliant with the [container-interop](https://github.com/container-interop/container-interop) standard. If it isn't you can use [Acclimate](https://github.com/jeremeamia/acclimate-container).
 
 ### Callables in the container
 
@@ -167,7 +167,8 @@ Silly supports the same mechanism of dependency injection through the callable p
 ```php
 use Psr\Logger\LoggerInterface;
 
-$app->command('process [directory]', function (LoggerInterface $logger) {
+// the order of parameters doesn't matter:
+$app->command('process [directory]', function (LoggerInterface $logger, $directory) {
     $logger->info('Processing directory ' . $directory);
 
     // ...
