--- a/source/_posts/2015-04-05-silly-cli.md
+++ b/source/_posts/2015-04-05-silly-cli.md
@@ -203,3 +203,5 @@ Those wanting the benefit of autowiring might like the former, while those famil
 I hope this example will show how a framework can be built without coupling to a dependency injection container. This was rather easy because it is a micro-framework, but I hope it will give others some ideas.
 
 For those interested to learn more about these topics, everything explained here was actually implemented in a library called [Invoker](https://github.com/mnapoli/Invoker). Feel free to have a look at it and maybe use it in your projects. The same principles shown here could be applied to any framework dispatching to PHP callables. Hopefully it will catch on!
+
+*Thanks for [@Darhazer](https://twitter.com/Darhazer) and [@najidev](https://twitter.com/najidev) for reviewing this article.*
